src/examples/assertions/JsonTest.php.out
./tools/phpunit tests/JsonTest.php
PHPUnit 11.5-g1d71d8f8f6 by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

F                                                                   1 / 1 (100%)

Time: 00:00, Memory: 25.32 MB

There was 1 failure:

1) JsonTest::testFailure
Failed asserting that a string is valid JSON (Syntax error, malformed JSON).

/path/to/tests/JsonTest.php:8

FAILURES!
Tests: 1, Assertions: 1, Failures: 1.
